src/main/java/com/example/backendtest/modules/tarefa/errors/TarefaAlredyFinished.java
package com.example.backendtest.modules.tarefa.errors;

import com.example.backendtest.errors.BadRequest;

public class TarefaAlredyFinished extends BadRequest {
    public TarefaAlredyFinished() {
        super("Tarefa jรก foi finalizada");
    }
}
